--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             <div class="swiper books-slider">
                 <div class="swiper-wrapper">
                     <a href="#" class="swiper-slide"><img src="images/Fantasy/FanBook1.png" alt=""></a>
-                    <a href="#" class="swiper-slide"><img src="images/Young Adult/YaBook1.png" alt=""></a>
+                    <a href="#" class="swiper-slide"><img src="images/Young-Adult/YaBook1.png" alt=""></a>
                     <a href="#" class="swiper-slide"><img src="images/Fiction/FicBook1.png" alt=""></a>
                     <a href="#" class="swiper-slide"><img src="images/Non-Fiction/NficBook1.png" alt=""></a>
                     <a href="#" class="swiper-slide"><img src="images/Fantasy/FanBook2.png" alt=""></a>
-                    <a href="#" class="swiper-slide"><img src="images/Young Adult/YaBook2.png" alt=""></a>
+                    <a href="#" class="swiper-slide"><img src="images/Young-Adult/YaBook2.png" alt=""></a>
                 </div>
                 <img src="images/stand.png" alt="" class="stand">
             </div>
@@ -237,7 +237,7 @@
                         <a href="#" class="fas fa-eye"></a>
                     </div>
                     <div class="image">
-                        <img src="images/Young Adult/YaBook5.png" alt="">
+                        <img src="images/Young-Adult/YaBook5.png" alt="">
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
@@ -253,7 +253,7 @@
                         <a href="#" class="fas fa-eye"></a>
                     </div>
                     <div class="image">
-                        <img src="images/Young Adult/YaBook8.png" alt="">
+                        <img src="images/Young-Adult/YaBook8.png" alt="">
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
@@ -269,7 +269,7 @@
                         <a href="#" class="fas fa-eye"></a>
                     </div>
                     <div class="image">
-                        <img src="images/Young Adult/YaBook3.png" alt="">
+                        <img src="images/Young-Adult/YaBook3.png" alt="">
                     </div>
                     <div class="content">
                         <h3>featured books</h3>
